--- a/environment.yml
+++ b/environment.yml
@@ -1,5 +1,6 @@
 name: elec-env
 channels:
+  - conda-forge
   - defaults
 dependencies:
   - anyio=3.5.0=py311haa95532_0
@@ -18,8 +19,8 @@ dependencies:
   - brotli-bin=1.0.9=h2bbff1b_7
   - brotlipy=0.7.0=py311h2bbff1b_1002
   - bzip2=1.0.8=he774522_0
-  - ca-certificates=2023.01.10=haa95532_0
-  - certifi=2022.12.7=py311haa95532_0
+  - ca-certificates=2022.12.7=h5b45459_0
+  - certifi=2022.12.7=pyhd8ed1ab_0
   - cffi=1.15.1=py311h2bbff1b_3
   - charset-normalizer=2.0.4=pyhd3eb1b0_0
   - colorama=0.4.6=py311haa95532_0
@@ -94,6 +95,7 @@ dependencies:
   - mkl_fft=1.3.1=py311h743a336_0
   - mkl_random=1.2.2=py311heda8569_0
   - munkres=1.1.4=py_0
+  - nb_conda_kernels=2.3.1=py311h1ea47a8_2
   - nbclassic=0.5.5=py311haa95532_0
   - nbclient=0.5.13=py311haa95532_0
   - nbconvert=6.5.4=py311haa95532_0
@@ -135,6 +137,7 @@ dependencies:
   - python=3.11.3=h966fe2a_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-fastjsonschema=2.16.2=py311haa95532_0
+  - python_abi=3.11=2_cp311
   - pytz=2022.7=py311haa95532_0
   - pywin32=305=py311h2bbff1b_0
   - pywinpty=2.0.10=py311h5da7b33_0
